lib/GSL/Special/bessel.h

int gsl_sf_bessel_y2_e(double x,double* result);
double gsl_sf_bessel_y2(double x);
int gsl_sf_bessel_yl_e(int l,double x,double* result);
double gsl_sf_bessel_yl(int l,double x);
int gsl_sf_bessel_yl_array(int lmax,double x,double* result_array);
int gsl_sf_bessel_i0_scaled_e(double x,double* result);
double gsl_sf_bessel_i0_scaled(double x);
int gsl_sf_bessel_i1_scaled_e(double x,double* result);
double gsl_sf_bessel_i1_scaled(double x);
int gsl_sf_bessel_i2_scaled_e(double x,double* result);
double gsl_sf_bessel_i2_scaled(double x);
int gsl_sf_bessel_il_scaled_e(int l,double x,double* result);
double gsl_sf_bessel_il_scaled(int l,double x);
int gsl_sf_bessel_il_scaled_array(int lmax,double x,double* result_array);
int gsl_sf_bessel_k0_scaled_e(double x,double* result);
double gsl_sf_bessel_k0_scaled(double x);
int gsl_sf_bessel_k1_scaled_e(double x,double* result);
double gsl_sf_bessel_k1_scaled(double x);
int gsl_sf_bessel_k2_scaled_e(double x,double* result);
double gsl_sf_bessel_k2_scaled(double x);
int gsl_sf_bessel_kl_scaled_e(int l,double x,double* result);
double gsl_sf_bessel_kl_scaled(int l,double x);
int gsl_sf_bessel_kl_scaled_array(int lmax,double x,double* result_array);
int gsl_sf_bessel_Jnu_e(double nu,double x,double* result);
double gsl_sf_bessel_Jnu(double nu,double x);
int gsl_sf_bessel_Ynu_e(double nu,double x,double* result);
double gsl_sf_bessel_Ynu(double nu,double x);
int gsl_sf_bessel_sequence_Jnu_e(double nu,int mode,size_t size,double* v);